force-app/main/default/objects/vlocity_ins__VlocityCode__c/fields/vlocity_ins__CodeSubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CodeSubType__c</fullName>
    <label>Code Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>CMS+PCS</fullName>
            </value>
            <value>
                <fullName>ICD-9</fullName>
            </value>
            <value>
                <fullName>ICD-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>