force-app/main/default/objects/vlocity_ins__VlocityCode__c/fields/vlocity_ins__CodeSystemType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CodeSystemType__c</fullName>
    <label>Code System Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>vlocity_ins__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>APC</fullName>
            </value>
            <value>
                <fullName>CDT</fullName>
            </value>
            <value>
                <fullName>DRG</fullName>
            </value>
            <value>
                <fullName>ICD</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>HCPC</fullName>
            </value>
            <value>
                <fullName>MS-DRG</fullName>
            </value>
            <value>
                <fullName>RUG</fullName>
            </value>
            <value>
                <fullName>CARC</fullName>
            </value>
            <value>
                <fullName>RARC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>